[tool.poetry]
name = "NA-Radar"
version = "0.1.0"
description = "Detect aircraft mouvements at Nantes-Atlantique Airport"
license = "MIT"
authors = ["matteli <matthieu.nue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
FlightRadarAPI = "^1.2.1"
dash = "^2.6.1"
pandas = "^1.4.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
