[tool.poetry]
name = "NA-Radar"
version = "0.3.0"
description = "Detect aircraft mouvements at Nantes-Atlantique Airport"
license = "MIT"
authors = ["Matthieu Nué <matthieu.nue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
FlightRadarAPI = "^1.2.1"
gunicorn = "^20.1.0"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
